# discoapi

./: README.md  data_refresh.py  main.py  notebook.ipynb  pyproject.toml  utils.py
data/: registry.json
data/commodities/: fred_APU0000702111.json  fred_APU0000703112.json  fred_APU0000704111.json  fred_APU0000708111.json  fred_APU0000709112.json  fred_APU0000717311.json  fred_APU000072610.json  fred_APU000074714.json  fred_APU0000FF1101.json
data/delinquency/: fred_DRALACBS.json  fred_DRCCLACBS.json  fred_DRCLACBS.json  fred_DRSFRMACBS.json
data/demographics/: fred_POPTHM.json  fred_SPDYNCBRTINUSA.json  fred_TTLHH.json
data/housing/: fred_CSUSHPINSA.json  fred_HNFSUSNSA.json  fred_MSPNHSUS.json  fred_MSPUS.json  fred_NHFSEPCS.json  fred_NHFSEPNTS.json  fred_NHFSEPUCS.json
data/income_and_spending/: fred_CXU500110LB0101M.json  fred_CXUHHOPERLB0101M.json  fred_DHLCRC1Q027SBEA.json  fred_DSPI.json
data/inflation_and_prices/: fred_CPIAUCSL.json  fred_CUSR0000SETA02.json  fred_CUUR0000SETA01.json  fred_PCE.json
data/money_aggregates/: fred_M2SL.json  fred_M2V.json
data/output_and_growth/: fred_GDP.json
data/rates/: fred_FEDFUNDS.json  fred_MORTGAGE15US.json  fred_MORTGAGE30US.json  fred_SOFR.json
data/static_datasets/: HomeIncMetrics.csv
data/wages_and_employment/: fred_JTSJOL.json  fred_MEFAINUSA646N.json  fred_UNEMPLOY.json  fred_UNRATE.json
modules/: commodities.py  delinquency.py  demographics.py  housing.py  income_and_spending.py  inflation_and_prices.py  money_aggregates.py  output_and_growth.py  rates.py  wages_and_employment.py
