[project]
name = "discoapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fredapi>=0.5.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "openai>=1.106.1",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
]
